wordpress/wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: final-project
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
